--- a/CUDA/cuSPARSE/Makefile
+++ b/CUDA/cuSPARSE/Makefile
@@ -9,14 +9,17 @@ NVFLAGS = -O3 -g -Wno-deprecated-gpu-targets -lcudart_static -lcusparse_static -
 
 LDFLAGS = -fopenmp -I $(CUPATH)/include -L$(CUPATH)/lib64 -lcudart -lcusparse
 
-OBJS    = CSR_SpMV.o cuSPARSE_SpMV_test.o
+OBJS    = CSRPlus.o CSR_SpMV.o cuSPARSE_SpMV_test.o 
 
-SPMVEXE: CSR_SpMV.o cuSPARSE_SpMV_test.o
-	$(HOSTCC) CSR_SpMV.o cuSPARSE_SpMV_test.o -o $(SPMVEXE) $(LDFLAGS) 
+SPMVEXE: $(OBJS)
+	$(HOSTCC) $(OBJS) -o $(SPMVEXE) $(LDFLAGS) 
     
-CSR_SpMV.o: CSR_SpMV.c
+CSR_SpMV.o: CSR_SpMV.c CSRPlus.h
 	$(HOSTCC) $(CFLAGS) CSR_SpMV.c -c 
 
+CSRPlus.o: CSRPlus.c CSRPlus.h
+	$(HOSTCC) $(CFLAGS) CSRPlus.c -c 
+    
 cuSPARSE_SpMV_test.o: cuSPARSE_SpMV_test.cu cuSPARSE_SpMV_test.h CUDA_Utils.h
 	$(NVCC) $(NVFLAGS) cuSPARSE_SpMV_test.cu -c 
     
