Add CSR SpMM test

--- a/CUDA/cuSPARSE/Makefile
+++ b/CUDA/cuSPARSE/Makefile
@@ -1,4 +1,5 @@
-SPMVEXE = cuda_CSR_SpMV.x
+SPMVEXE = CSR_SpMV.x
+SPMMEXE = CSR_SpMM.x
 
 #HOSTCC  = gcc
 #CFLAGS  = -O3 -march=native -Wall -fopenmp -g -std=gnu99
@@ -12,13 +13,23 @@ NVFLAGS = -O3 -g -Wno-deprecated-gpu-targets -lcudart_static -lcusparse_static -
 
 LDFLAGS = -fopenmp -I $(CUPATH)/include -L$(CUPATH)/lib64 -lcudart -lcusparse
 
-OBJS    = CSRPlus_utils.o CSRPlus_kernels.o CSR_SpMV.o cuSPARSE_SpMV_test.o 
+OBJS    = CSRPlus_utils.o CSRPlus_kernels.o cuSPARSE_SpMV_test.o 
+SPMVOBJ = $(OBJS) CSR_SpMV.o 
+SPMMOBJ = $(OBJS) CSR_SpMM.o 
 
-SPMVEXE: $(OBJS)
-	$(HOSTCC) $(OBJS) -o $(SPMVEXE) $(LDFLAGS) 
+all: SPMVEXE SPMMEXE
+
+SPMVEXE: $(SPMVOBJ)
+	$(HOSTCC) $(SPMVOBJ) -o $(SPMVEXE) $(LDFLAGS) 
+
+SPMMEXE: $(SPMMOBJ)
+	$(HOSTCC) $(SPMMOBJ) -o $(SPMMEXE) $(LDFLAGS) 
 
 CSR_SpMV.o: CSR_SpMV.c CSRPlus.h
 	$(HOSTCC) $(CFLAGS) CSR_SpMV.c -c 
+
+CSR_SpMM.o: CSR_SpMM.c CSRPlus.h
+	$(HOSTCC) $(CFLAGS) CSR_SpMM.c -c 
 
 CSRPlus_utils.o: CSRPlus.h CSRPlus_utils.c
 	$(HOSTCC) $(CFLAGS) CSRPlus_utils.c -c 
