add std=-c99 in makefile for simple test

--- a/LAPACK/lapack_omp_test/0_simple_test/makefile
+++ b/LAPACK/lapack_omp_test/0_simple_test/makefile
@@ -6,7 +6,7 @@ FFLAGS =
 # if need to run with DEBUG mode, add -DDEBUG
 #CPPFLAGS = -m64 -I${MKLROOT}/include -I include/ -L${MKLROOT}/lib/intel64 -Wl,--no-as-needed -lmkl_scalapack_lp64 -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lmkl_blacs_intelmpi_lp64 -lpthread -ldl -lrt -O3 -DDEBUG -fopenmp
 
-CPPFLAGS = -m64 -I${MKLROOT}/include -I include/ -L${MKLROOT}/lib/intel64 -Wl,--no-as-needed -lmkl_scalapack_lp64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lmkl_blacs_intelmpi_lp64 -lpthread -ldl -lrt -O3 -fopenmp
+CPPFLAGS = -m64 -I${MKLROOT}/include -I include/ -L${MKLROOT}/lib/intel64 -Wl,--no-as-needed -lmkl_scalapack_lp64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lmkl_blacs_intelmpi_lp64 -lpthread -ldl -lrt -O3 -fopenmp -std=c99
 
 #OMP_LAPACK_CFLAGS = -m64 -I${MKLROOT}/include -I include/ -L${MKLROOT}/lib/intel64 -Wl,--no-as-needed -lmkl_scalapack_lp64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lmkl_blacs_intelmpi_lp64 -lpthread -ldl -lrt -O3 -fopenmp
 
@@ -20,7 +20,7 @@ OBJSC = test_MPI_OMP.o
 
 LIBBASE = test_mpi_omp
 
-override CC=mpiicc
+override CC=mpicc
 
 all: test_mpi_omp
 
