--- a/LAPACK/lapack_omp_test/1_dgemm_test/makefile
+++ b/LAPACK/lapack_omp_test/1_dgemm_test/makefile
@@ -8,7 +8,7 @@ FFLAGS =
 
 #CPPFLAGS = -m64 -I${MKLROOT}/include -I include/ -L${MKLROOT}/lib/intel64 -Wl,--no-as-needed -lmkl_scalapack_lp64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lmkl_blacs_intelmpi_lp64 -lpthread -ldl -lrt -O3 -fopenmp
 
-CPPFLAGS =  -I${MKLROOT}/include -L${MKLROOT}/lib/intel64 -lmkl_scalapack_lp64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -lmkl_blacs_intelmpi_lp64 -liomp5 -lpthread -ldl -O0 -fopenmp
+CPPFLAGS =  -I${MKLROOT}/include -L${MKLROOT}/lib/intel64 -lmkl_scalapack_lp64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -lmkl_blacs_intelmpi_lp64 -liomp5 -lpthread -ldl -O0 -fopenmp -std=gnu99
 
 #CPPFLAGS = -m64 -I${MKLROOT}/include -I include/ -L${MKLROOT}/lib/intel64 -Wl,--no-as-needed -lmkl_scalapack_lp64 -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lmkl_blacs_intelmpi_lp64 -lpthread -ldl -lrt -O0 -fopenmp
 
@@ -22,7 +22,7 @@ OBJSC = test_dgemm_omp.o
 
 LIBBASE = test_dgemm_omp
 
-override CC=mpiicc
+override CC=mpicc
 
 all: test_dgemm_omp
 
