Add CG to FD3D_MG for perf comparison with FD3D

--- a/LinearSystem/FD3D_MG/makefile
+++ b/LinearSystem/FD3D_MG/makefile
@@ -1,5 +1,5 @@
 EXE  = FD3D_Poisson_MG.exe
-OBJS = CSR_mat.o gen_stencil_mat.o Poisson_multigrid.o FD3D_Poisson_MG.o
+OBJS = CSR_mat.o gen_stencil_mat.o Poisson_multigrid.o CG.o FD3D_Poisson_MG.o
 
 CC      = icc
 CFLAGS  = -O3 -Wall -g -std=gnu99 -qopenmp -xHost -mkl
@@ -16,6 +16,9 @@ gen_stencil_mat.o: makefile CSR_mat.h gen_stencil_mat.h gen_stencil_mat.c
 
 Poisson_multigrid.o: makefile CSR_mat.h gen_stencil_mat.h Poisson_multigrid.h Poisson_multigrid.c
 	$(CC) $(CFLAGS) Poisson_multigrid.c -c
+
+CG.o: makefile CG.h CG.c
+	$(CC) $(CFLAGS) CG.c -c
 
 FD3D_Poisson_MG.o: makefile Poisson_multigrid.h FD3D_Poisson_MG.c
 	$(CC) $(CFLAGS) FD3D_Poisson_MG.c -c
