host_daemon->msg_channel, separate lib/drive file

--- a/CUDA/msg_channel/makefile
+++ b/CUDA/msg_channel/makefile
@@ -1,4 +1,4 @@
-EXE = host_daemon.x
+EXE = msg_channel.x
 
 CC     = gcc
 CFLAGS = -O3 -Wall -fopenmp -g -std=gnu99 -march=native
@@ -8,9 +8,10 @@ CFLAGS = -O3 -Wall -fopenmp -g -std=gnu99 -march=native
 
 CUDA_PATH ?= /usr/local/cuda-10.0
 NVCC       = nvcc
-NVFLAGS    = -O3 -g -Wno-deprecated-gpu-targets -lcudart_static -lcusparse_static -lculibos -arch=sm_60
+NVCCFLAGS  = -O3 -g -Wno-deprecated-gpu-targets -arch=sm_60
+NVLDFLAGS  = -lcuda -lcudart -lcusparse
 
-LDFLAGS = -fopenmp -I$(CUDA_PATH)/include -L$(CUDA_PATH)/lib64 -lcuda -lcudart -lcusparse
+LDFLAGS = -fopenmp -L$(CUDA_PATH)/lib64 -lcuda -lcudart -lcusparse
 
 C_SRCS  = $(wildcard *.c)
 C_OBJS  = $(C_SRCS:.c=.o)
@@ -21,13 +22,14 @@ CU_OBJS = $(CU_SRCS:.cu=.cuo)
 OBJS    = $(C_OBJS) $(CU_OBJS)
 
 EXE: $(OBJS)
-	$(CC) $(OBJS) -o $(EXE) $(LDFLAGS) 
+	$(NVCC) $(NVCCFLAGS) -dlink -o msg_channel.o *.cuo.o $(NVLDFLAGS)
+	$(CC) $(C_OBJS) *.cuo.o msg_channel.o -o $(EXE) $(LDFLAGS) 
 
 %.o: %.c
 	$(CC) $(CFLAGS) -o $@ -c $^
 
 %.cuo: %.cu
-	$(NVCC) $(NVFLAGS) -o $@ -c $^ 
+	$(NVCC) $(NVCCFLAGS) -rdc=true -o $@.o -c $^ 
 
 clean:
 	rm $(OBJS) $(EXE)
