--- a/CUDA/CUDA-aware_MPI/makefile
+++ b/CUDA/CUDA-aware_MPI/makefile
@@ -1,30 +1,37 @@
-EXE = cuda_aware_mpi.x
+CC             = mpicc
+CFLAGS         = -O3 -Wall -fopenmp -g -std=gnu99 
+CUDA_PATH     ?= /usr/local/cuda-10.0
+GENCODE_SM60   = -gencode arch=compute_60,code=sm_60
+GENCODE_SM70   = -gencode arch=compute_70,code=sm_70
+GENCODE_FLAGS  = $(GENCODE_SM60) $(GENCODE_SM70)
+NVCC           = nvcc
+NVFLAGS        = -O3 -g -Wno-deprecated-gpu-targets -lcuda -lcudart -lcusparse $(GENCODE_FLAGS)
+LDFLAGS        = -fopenmp -I$(CUDA_PATH)/include -L$(CUDA_PATH)/lib64 -lcuda -lcudart -lcusparse
 
-CC     = mpicc
-CFLAGS = -O3 -Wall -fopenmp -g -std=gnu99 
-
-CUDA_PATH ?= /usr/local/cuda-10.0
-NVCC       = nvcc
-NVFLAGS    = -O3 -g -Wno-deprecated-gpu-targets -lcudart_static -lcusparse_static -lculibos -arch=sm_60
-
-LDFLAGS = -fopenmp -I$(CUDA_PATH)/include -L$(CUDA_PATH)/lib64 -lcuda -lcudart -lcusparse
+EXES    = basic.exe rma_update.exe latency.exe
 
 C_SRCS  = $(wildcard *.c)
 C_OBJS  = $(C_SRCS:.c=.o)
 
 CU_SRCS = $(wildcard *.cu)
-CU_OBJS = $(CU_SRCS:.cu=.cuo)
+CU_OBJS = $(CU_SRCS:.cu=.cu.obj)
 
-OBJS    = $(C_OBJS) $(CU_OBJS)
+all: $(EXES)
 
-EXE: $(OBJS)
-	$(CC) $(OBJS) -o $(EXE) $(LDFLAGS) 
+basic.exe: $(CU_OBJS) basic.o
+	$(CC) $^ -o $@ $(LDFLAGS)
+
+rma_update.exe: $(CU_OBJS) rma_update.o
+	$(CC) $^ -o $@ $(LDFLAGS)
+
+latency.exe: $(CU_OBJS) latency.o
+	$(CC) $^ -o $@ $(LDFLAGS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -o $@ -c $^
 
-%.cuo: %.cu
+%.cu.obj: %.cu
 	$(NVCC) $(NVFLAGS) -o $@ -c $^ 
 
 clean:
-	rm $(OBJS) $(EXE)
+	rm $(OBJS) $(EXES)
