Update CUDA-aware_MPI programs to use MPICH 3.4.x

--- a/CUDA/CUDA-aware_MPI/makefile
+++ b/CUDA/CUDA-aware_MPI/makefile
@@ -8,7 +8,7 @@ NVCC           = nvcc
 NVFLAGS        = -O3 -g -Wno-deprecated-gpu-targets -lcuda -lcudart -lcusparse $(GENCODE_FLAGS)
 LDFLAGS        = -fopenmp -I$(CUDA_PATH)/include -L$(CUDA_PATH)/lib64 -lcuda -lcudart -lcusparse
 
-EXES    = basic.exe rma_update.exe latency.exe
+EXES    = basic.exe p2p_rma_ipc.exe rma_update.exe latency.exe
 
 C_SRCS  = $(wildcard *.c)
 C_OBJS  = $(C_SRCS:.c=.o)
@@ -19,6 +19,9 @@ CU_OBJS = $(CU_SRCS:.cu=.cu.obj)
 all: $(EXES)
 
 basic.exe: $(CU_OBJS) basic.o
+	$(CC) $^ -o $@ $(LDFLAGS)
+
+p2p_rma_ipc.exe: $(CU_OBJS) p2p_rma_ipc.o
 	$(CC) $^ -o $@ $(LDFLAGS)
 
 rma_update.exe: $(CU_OBJS) rma_update.o
